@@ -16,7 +16,7 @@
 
   <groupId>com.azure</groupId>
   <artifactId>azure-search</artifactId>
-  <version>1.0.0-beta.2</version> <!-- {x-version-update;com.azure:azure-search;current} -->
+  <version>11.0.0-beta.2</version> <!-- {x-version-update;com.azure:azure-search;current} -->
   <packaging>jar</packaging>
 
   <properties>
@@ -29,12 +29,12 @@
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-core</artifactId>
-      <version>1.3.0-beta.2</version> <!-- {x-version-update;unreleased_com.azure:azure-core;dependency} -->
+      <version>1.3.0</version> <!-- {x-version-update;com.azure:azure-core;dependency} -->
     </dependency>
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-core-http-netty</artifactId>
-      <version>1.4.0-beta.2</version> <!-- {x-version-update;unreleased_com.azure:azure-core-http-netty;dependency} -->
+      <version>1.4.0</version> <!-- {x-version-update;com.azure:azure-core-http-netty;dependency} -->
     </dependency>
 
     <!-- Added this dependency to include necessary annotations used by reactor core.
@@ -51,7 +51,7 @@
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-core-test</artifactId>
-      <version>1.2.0-beta.1</version> <!-- {x-version-update;com.azure:azure-core-test;current} -->
+      <version>1.1.0</version> <!-- {x-version-update;com.azure:azure-core-test;dependency} -->
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -84,10 +84,34 @@
       <version>1.7.2</version> <!-- {x-version-update;com.microsoft.azure:azure-client-runtime;external_dependency} -->
       <scope>test</scope>
     </dependency>
+
+    <!-- Remove these 3 dependencies when we resolve: https://github.com/Azure/azure-sdk-for-java/issues/8874 -->
     <dependency>
       <groupId>org.unitils</groupId>
       <artifactId>unitils-core</artifactId>
-      <version>3.4.2</version> <!-- {x-version-update;org.unitils:unitils-core;external_dependency} -->
+      <version>3.4.6</version> <!-- {x-version-update;org.unitils:unitils-core;external_dependency} -->
+      <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>commons-collections</groupId>
+          <artifactId>commons-collections</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>ognl</groupId>
+          <artifactId>ognl</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>commons-collections</groupId>
+      <artifactId>commons-collections</artifactId>
+      <version>3.2.2</version> <!-- {x-version-update;commons-collections:commons-collections;external_dependency} -->
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>ognl</groupId>
+      <artifactId>ognl</artifactId>
+      <version>3.0.12</version> <!-- {x-version-update;ognl:ognl;external_dependency} -->
       <scope>test</scope>
     </dependency>
 
@@ -145,6 +169,7 @@
             <configuration>
               <argLine>
                 --add-exports com.azure.core/com.azure.core.implementation.http=ALL-UNNAMED
+                --add-opens com.azure.core/com.azure.core.util=ALL-UNNAMED
                 --add-opens com.azure.search/com.azure.search=ALL-UNNAMED
                 --add-opens com.azure.search/com.azure.search.models=ALL-UNNAMED
                 --add-opens com.azure.search/com.azure.search.implementation=ALL-UNNAMED
